[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eshet_tasmota"
version = "0.0.1"

dependencies = [
    "eshet @ git+https://github.com/tomjnixon/eshet.py.git",
    "aiomqtt",
]

[tool.setuptools]
py-modules = ["eshet_tasmota"]

[project.scripts]
eshet_tasmota = "eshet_tasmota:main"
